detect user position rewrite

--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
 	<body>
 	<h2> Korbanek Map</h2>
 	<div class="map-container">
-            <div class="map map-full-width" id="map" data-map-config='{"searchFeature":true, "showAll":false, "detectUserPosition":false, "mapOptions": {"disableDefaultUI": true}}'></div>
-	</div>
-        <div class="map-container container-fixed">
-            <div class="map map-fixed" id="map-dealer-region" data-map-config='{"activeInfoWindows":false, "mapZoom":5, "markersSourceClass":".point", "showAll":true, "detectUserPosition":false, "mapOptions": {"disableDefaultUI": true}}'></div>
+            <div class="map map-full-width" id="map" data-map-config='{"searchFeature":true, "showAll":false, "detectUserPosition":true, "mapOptions": {"disableDefaultUI": true}}'></div>
 	</div>
         <div id="dealers-detail">            
             <div class="central dealer point" data-lat="52.458764" data-lng="16.646641000000045">
