--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<body>
 	<h2> Korbanek Map</h2>
 	<div class="map-container">
-            <div class="map map-full-width" id="map" data-map-config='{"searchFeature":true, "showAll":false, "detectUserPosition":true, "mapOptions": {"disableDefaultUI": true}}'></div>
+            <div class="map map-full-width" id="map" data-map-config='{"searchFeature":true, "inputLabel":"Znajdź najbliższego dealera: ","searchButtonText":"SZUKAJ DEALERA", "inputText":"Podaj kod pocztowy lub dokładny adres", "showAll":false, "detectUserPosition":false, "mapOptions": {"disableDefaultUI": true}}'></div>
 	</div>
         <div id="dealers-detail">            
             <div class="central dealer point" data-lat="52.458764" data-lng="16.646641000000045">
